Add footer (without responsiveness)

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 # next.js
 /.next/
 /out/
+.next/
 
 # production
 /build
@@ -35,5 +36,5 @@ yarn-error.log*
 # vercel
 .vercel
 
-
+.vscode/
 .history/
