--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "dependencies": {
     "contentful": "^7.14.6",
     "date-fns": "^2.15.0",
+    "dotenv": "^8.2.0",
     "next": "^9.5.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "swr": "^0.3.0",
+    "unfetch": "^4.1.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
