--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "^9.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
     "swr": "^0.3.0",
     "unfetch": "^4.1.0"
   },
